2005-02-05  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* PropertyGrid.cs: Updated. Patch by Jonathan Chambers

2005-02-04  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs: Respect the clipping rect when
	drawing. Only fill the intersection of clips and rects so there
	isn't a lot of large fills.
	* ScrollBar.cs: Pass the correct clipping rect to the theme
	engine. Remove some debug code.

2005-02-05  John BouAntoun  <jba-mono@optusnet.com.au>
	
	* DateTimePicker.cs: 
		- Fixed crash on DateTime.Parse, use Constructor instead 

2005-02-04  Jordi Mas i Hernandez <jordi@ximian.com>
	
	* MenuItem.cs:
	* MenuAPI.cs:
		- Owner draw support (MeasureItem and DrawItem)

2005-02-04  Jordi Mas i Hernandez <jordi@ximian.com>
	
	*  Menu.cs:
		- Implements FindMergePosition and MergeMenu functions (very poor documented)
		- Fixes MenuItems.Add range
	* MenuItem.cs:
		- MergeMenu and Clone and CloneMenu functions

2005-02-03  Jackson Harper  <jackson@ximian.com>

	* ScrollBar.cs: Make abstract
	* ScrollableControl.cs: Create H/V scrollbars now that scrollbar
	is abstract.

2005-02-03  Jackson Harper  <jackson@ximian.com>

	* ScrollBar.cs: First part of my scrollbar fixups. This removes
	all the unneeded refreshes and uses invalidates with properly
	computed rects.

2005-02-03  Peter Bartok  <pbartok@novell.com>

	* ComponentModel.cs: Added
	* IDataGridEditingService.cs: Added
	* Timer.cs: Added missing attributes
	* ToolTip.cs: Added missing attributes

2005-02-03  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* PropertyGridView.cs: Added. Patch by Jonathan Chambers

2005-02-03  Peter Bartok  <pbartok@novell.com>

	* ListBox.cs: Added missing attributes

2005-02-03  Jordi Mas i Hernandez <jordi@ximian.com>
	
	* ListBox.cs:
		- Fixes font height after font change
		- Avoid generating unnecesary OnSelectedIndexChanged on clearing
		
2005-02-02  Peter Bartok  <pbartok@novell.com>

	* HandleData.cs: Introduced static methods to allow class 