@@ -1,3 +1,7 @@
+2005-02-07  Miguel de Icaza  <miguel@novell.com>
+
+	* UpDownBase.cs: Add ReadOnly and UpDownAlign properties.
+
 2005-02-05  Jonathan Chambers  <jonathan.chambers@ansys.com>
 
 	* PropertyGrid.cs: Updated. Patch by Jonathan Chambers
